# hive

./: .env.example  .gitguardian.yaml  .gitguardian.yml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  GOVERNANCE.md  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  go.work  go.work.sum  package.json  pnpm-lock.yaml  tsconfig.base.json
.claude/: settings.json
.claude/hooks/: bash-safety.js  commit-guard.js  secrets-scanner.js
.claude/rules/: openwolf.md  orchestrator.md
.claude/skills/: debug-issue.md  explore-codebase.md  memory-tools.md  refactor-safely.md  review-changes.md
.github/: CODEOWNERS  MERGE-POLICY.md  branch-protection-main.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/ci/: test-db-bootstrap.sql
.github/scripts/: pr-cleanup.sh
.github/workflows/: agent-engine-sif.yml  chat-app-ci.yml  ci-noop.yml  ci.yml  deploy-staging.yml  license-gate.yml  owui-nightly.yml  phase-19-owui-nightly.yml  phase-19.yml  pr-cleanup.yml  web-e2e-smoke.yml
.planning/: INTEGRATION-CHECK-v1.0.md  MILESTONES.md  MVP.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SECURITY-P0-BACKLOG.md  STATE.md  STATE.md.bak-2026-03-18T07-39-56  UAT-REPORT.md  ideas-triage-2026-06-10.md  next-session-clamp-responses-streaming.md  next-session-fix-embed-env-cascade.md  next-session-fix-js-fixture-path.md  next-session-flaky-usage-tokens.md  next-session-litellm-route-pinning.md  next-session-post-deploy-sdk-replay.md  next-session-ui-styling.md  next-session-visual-regression-coverage.md  next-session-web-console-revamp.md  next-sessions-INDEX.md  staging-live-audit-2026-06-12.md  test-coverage-audit-2026-06-11.md  v1.0-MILESTONE-AUDIT.md  v1.1-DEFERRED-SCOPE.md  v1.2-agentic-surface.md  v1.3-device-deployment-and-model-advisor.md
.planning/carl/: CHARTER.md  DESIGN.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: apikey-cache-invalidation.md  apikey-usage-attribution.md  flaky-usage-tokens-root-cause.md
.planning/demo/: INVESTOR-DEMO.md
.planning/infra/: vps-deployment-options.md
.planning/marketing/: home-qa-punchlist.md  sovereign-copy.md  sovereign-design-system.md  sovereign-image-direction.md  sovereign-seo-spec.md
.planning/milestones/: v1.0-INTEGRATION-CHECK.md  v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md
.planning/outreach/: susana-martins-email.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/sprints/: BOARD-SETUP.md  SPRINT-01.md
.planning/staging/: cloud-init.yml  tls-architecture.md
.planning/strategy/: sovereign-pivot-strategy.md
.planning/v1.1-chatapp/: LIBRECHAT-UPGRADE-PLAYBOOK.DEPRECATED.md  LIBRECHAT-UPGRADE-PLAYBOOK.md  LIBRECHAT-VERSION.DEPRECATED.md  LIBRECHAT-VERSION.md  LICENSE-DECISION.DEPRECATED.md  LICENSE-DECISION.md  MILESTONE.md  V1.1-MASTER-PLAN.md
.wolf/: GOAL.md  anatomy.md  buglog.json  cerebrum.md  cost-ledger.md  decisions.md  fleet.json  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
app/: __init__.py  api.py  auth.py  ledger.py  payments.py  ratelimit.py  refunds.py  routing.py  server.py  signatures.py  storage.py
apps/agent-console/: middleware.test.ts  middleware.ts  next.config.ts  package.json  vitest.config.ts
apps/agent-engine/: go.mod
apps/api/: Dockerfile  package.json  tsconfig.json
apps/chat-app/: .env.example  .env.upstream.example  .gitignore  Dockerfile  librechat.yaml
apps/control-plane/: .air.toml  go.mod  go.sum
apps/desktop/: README-desktop.md  index.html  package.json  (+4 more)
apps/desktop-sandbox/: Cargo.toml  README.md  VENDORING.md
apps/desktop-sandbox/codex-windows-sandbox/: Cargo.toml
apps/desktop-sandbox/codex-windows-sandbox/src/: absolute_path.rs  acl.rs  cap.rs  desktop.rs  env.rs  helper_materialization.rs  identity.rs  lib.rs  logging.rs  permission_profile.rs  process.rs  sandbox_users.rs  sandbox_utils.rs  setup.rs  setup_error.rs  token.rs  wfp.rs  wfp_setup.rs
apps/desktop-sandbox/codex-windows-sandbox/src/elevated/: ipc_framed.rs  mod.rs  runner_client.rs
apps/desktop-sandbox/codex-windows-sandbox/src/wfp/: filter_specs.rs
apps/desktop-sandbox/hive-desktop-sandbox/: Cargo.toml  build.rs
apps/desktop-sandbox/hive-desktop-sandbox/assets/apparmor/: hive-bwrap-userns
apps/desktop-sandbox/hive-desktop-sandbox/examples/: egress-proxy-harness.rs
apps/desktop-sandbox/hive-desktop-sandbox/src/: egress_proxy.rs  lib.rs  linux.rs  policy.rs  shim.rs  wfp_ports.rs  windows.rs  windows_elevated.rs  windows_firewall.rs  windows_plan.rs  windows_resolve.rs
apps/desktop-sandbox/hive-desktop-sandbox/tests/: launch_spawn.rs
apps/desktop-sandbox/scripts/: egress-bwrap-e2e.sh
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: entitlements.rs  local_tasks.rs  main.rs  settings.rs
docs/: README.md  enterprise-sso.md  license-allowlist.md  support-matrix.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
openapi/: openapi.yaml
scripts/: README.md  install.sh  license-allowlist.json  phase10-scrub-legacy-storage.sh  phase10-smoke.sh  sbom-license-check.sh  seed-demo-owner.py  seed-owui-e2e-user.py  test_seed_demo_owner.py  test_seed_owui_e2e_user.py  verify-requirements-matrix.sh
supabase/: config.toml
tests/: test_api.py  test_api_errors.py  test_api_extensions.py  test_auth.py  test_ledger.py  test_payments.py  test_ratelimit.py  test_refund.py  test_routing.py  test_signatures.py  test_storage.py  test_webhook_security.py
tools/: lint-no-desktop-local-http.mjs  lint-no-direct-audit-write.mjs  lint-no-direct-tenant-id.mjs  lint-no-direct-tenant-setting.mjs  soc2-control-map.yaml  soc2-coverage-report.mjs
website/: README.md  _headers  docs.html  index.html
(+1711 files in other folders)
