[package]
name = "codex-windows-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_windows_sandbox"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
dunce = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs-next = "2.0"

[dependencies.rand]
version = "0.8"
default-features = false
features = ["std", "small_rng"]

# Verbatim-vendored modules are Windows-only Win32 FFI (see VENDORING.md); this
# crate compiles to an empty crate on non-Windows hosts (every `mod` in lib.rs
# is `#[cfg(windows)]`-gated), so windows-sys is only ever actually built when
# targeting Windows.
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_Diagnostics_Debug",
]

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
