[package]
name = "hive-desktop-sandbox"
version.workspace = true
edition.workspace = true
# Proprietary Hive code; deliberately does not inherit the Apache-2.0
# workspace default used by the vendored codex-bwrap / codex-process-hardening
# crates. See VENDORING.md.

[lib]
name = "hive_desktop_sandbox"
path = "src/lib.rs"
doctest = false

# src/bin/hive-egress-shim.rs is auto-discovered by Cargo's default
# `autobins`. Runs inside the sandbox for a NetworkPolicy::AllowHosts
# launch; see that file's module doc. Its real logic is
# `#[cfg(target_os = "linux")]`-gated internally (matching egress_proxy.rs
# and shim.rs), with a no-op stub on other platforms so this bin target
# still compiles as part of `cargo clippy --all-targets` cross-checked to
# Windows (VENDORING.md's verification step) without needing any
# target-conditional [[bin]] table (Cargo has none).

[lints]
workspace = true

[dependencies]
# Pure, cross-platform parts of windows_elevated.rs (the provisioning-readiness
# marker (de)serialization and the allow-path canonicalization) compile and are
# unit-tested on every platform including this crate's Linux CI, so these are
# unconditional, not windows-only.
dunce = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
codex-process-hardening = { path = "../codex-process-hardening" }
landlock = { workspace = true }
seccompiler = { workspace = true }
libc = { workspace = true }
# Real (not dev-only) dependency here: linux::launch creates a per-launch
# temp directory to hold the egress_proxy.rs Unix socket for a real
# AllowHosts task, not just in tests.
tempfile = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Restricted token + directory ACL + Job Object, plus the Windows Firewall COM
# half of the two-layer egress fence (Integration B2 / blueprint Step 4.4):
# `windows_firewall.rs` drives INetFwPolicy2/INetFwRule3 to install the
# block-all-outbound and loopback allowlist rules, SID-scoped to the sandbox
# account. See `windows_firewall.rs` and VENDORING.md.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WindowsFirewall",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Com",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }
# Step 3 Integration A: the elevated compose (windows_elevated.rs) and the two
# Hive binaries orchestrate the vendored mechanism primitives, so this crate now
# depends on the Apache-2.0 subcrate on Windows. The compose authors its own
# net-new Win32 (LSA logon-right grant, seclogon service check, child wait) in
# windows-sys 0.52 to interoperate natively with the subcrate's windows-sys
# HANDLE/SID types, rather than bridging to the `windows` 0.58 crate above.
codex-windows-sandbox = { path = "../codex-windows-sandbox" }
anyhow = "1.0"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    # Sandbox-home protected DACL (decision D-013): EXPLICIT_ACCESS_W /
    # SetEntriesInAclW / SetNamedSecurityInfoW and the FILE_* access masks the
    # explicit ACEs are built from.
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Services",
    "Win32_System_Threading",
] }

# Default features include `std` + `getrandom`, so `OsRng` (CSPRNG password
# generation in provisioning) is available without hand-picking feature flags.
[target.'cfg(windows)'.dependencies.rand]
version = "0.8"

# Zeroizes the generated cleartext provisioning password on drop, matching
# `codex-windows-sandbox`'s `SandboxCreds`/`runner_client` zeroize-on-drop
# handling of the same class of secret.
[target.'cfg(windows)'.dependencies.zeroize]
version = "1"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
