[package]
name = "hive-desktop"
version = "0.1.0"
description = "Hive desktop shell (Tauri) hosting the agent-console panel"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
# default-tls (native-tls): schannel on Windows, OpenSSL on Linux (already
# present in deploy/docker/Dockerfile.desktop-linux via libssl-dev). Avoids
# rustls's separate process-wide crypto-provider bootstrap on both targets.
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
