[package]
name = "hive-desktop"
version = "0.1.0"
description = "Hive desktop shell (Tauri) hosting the agent-console panel"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
url = "2.5.8"
# default-features off + rustls-no-provider: reqwest's plain defaults pulled
# in quinn (HTTP/3) and both the ring and aws-lc-rs crypto provider crates
# transitively; this pin drops quinn (not needed here) and leaves exactly one
# provider (ring, via the `rustls` line below) in Cargo.lock -- verified by
# grepping Cargo.lock, not assumed. `rustls-no-provider` specifically means
# reqwest brings no default of its own, so main.rs's explicit
# install_default() call is the only thing that installs one. `stream` lets
# fetch() cap the response body size (read_capped_body) instead of buffering
# it unbounded; the response is deserialized with serde_json directly, so
# reqwest's own `json` feature is unused and left off.
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "stream"] }
# StreamExt, to drive reqwest's bytes_stream() in read_capped_body. Already
# resolved transitively via reqwest/tauri; declared directly so entitlements.rs
# can `use` the trait.
futures-util = "0.3"
# The single crypto provider `rustls-no-provider` above deliberately omits.
# rustls 0.23 panics on the first TLS handshake if no default provider was
# ever installed, so main.rs calls
# rustls::crypto::ring::default_provider().install_default() once at
# startup, before entitlements::build_client ever runs.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# Blueprint Step 4.4 (#308/#311): local (desktop-side, never-synced) task
# execution under the platform-native sandbox. Path dependency on a sibling
# app's crate, not a shared workspace member (apps/desktop-sandbox has its
# own, separate Cargo workspace with its own pinned toolchain) -- Cargo
# supports this directly; hive-desktop-sandbox resolves its own
# `workspace = true` fields against apps/desktop-sandbox/Cargo.toml
# regardless of which crate depends on it.
hive-desktop-sandbox = { path = "../../desktop-sandbox/hive-desktop-sandbox" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
